# amphi_rl_dpgraph

./: .gitignore  LICENSE  README.md  TEST_RESULTS.md  demo_colab.ipynb  pyproject.toml  requirements.txt
.github/workflows/: tests-artifact.yml
notebooks/: demo_colab.ipynb
patent/: architecture.md
results/: EXPERIMENT_REPORT.md  audit_checkpoints_adaptive.jsonl  audit_fhir_adaptive.jsonl  audit_log.jsonl  audit_log_signed_adaptive.jsonl  baseline_comparison.csv  baseline_comparison.jsonl  consent_cap_log.jsonl  controller_config.json  controller_decisions.jsonl  dcpg_adaptive.sqlite  dcpg_crdt_demo.json  dcpg_snapshot.json  delta_auroc_log.jsonl  experiment_config.json  latency_summary.csv  policy_metrics.csv  ppo_model.pt  rl_reward_stats.json  run_metadata.json  statistical_robustness.json
results/sample_run/: dcpg_snapshot.json  latency_summary.csv  policy_metrics.csv  sample_dag.json
scripts/: generate_test_report.py
src/: metrics.py
src/amphi_rl_dpgraph/: __init__.py  __main__.py  cmo_media.py  cmo_registry.py  db.py  dcpg.py  masking.py  phi_detector.py  rl_agent.py  run_demo.py
tests/: conftest.py
