[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amphi_rl_dpgraph"
version = "0.1.0"
description = "Real-time multimodal de-identification with cross-modal PHI risk graph and adaptive policy control."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

# Core runtime dependency (used by audit_signing.py)
dependencies = [
    "cryptography>=41.0",
]

[project.optional-dependencies]
# Enables AUROC computation in metrics.py
ml = [
    "scikit-learn>=1.3",
    "numpy>=1.24",
]
# Enables the PPO neural-network policy in rl_agent.py
rl = [
    "torch>=2.0",
]
# Enables privacy-utility curve plot in run_demo.py
plot = [
    "matplotlib>=3.7",
]
# Install everything
full = [
    "amphi_rl_dpgraph[ml,rl,plot]",
]

[project.scripts]
amphi-run = "amphi_rl_dpgraph.run_demo:main"

[tool.setuptools.packages.find]
where = ["src"]
