[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amphi-rl-dpgraph"
version = "0.1.0"
description = "Adaptive de-identification pipeline with exposure-aware policy control and DCPG utilities."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "VKAT Ganti" }]
dependencies = []

[project.optional-dependencies]
crypto = ["cryptography>=41"]
metrics = ["scikit-learn>=1.2"]
ml = ["sentence-transformers>=2.2"]
image = ["numpy>=1.23"]
plot = ["matplotlib>=3.7"]
rl = ["torch>=2.0"]
dev = ["pytest>=7.4", "ruff>=0.4", "mypy>=1.8"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
